# cookie-scoop

./: Cargo.toml  LICENSE  README.md  UPSTREAM.md
.github/workflows/: ci.yml
crates/cookie-scoop/: Cargo.toml
crates/cookie-scoop-cli/: Cargo.toml
crates/cookie-scoop-cli/src/: main.rs
crates/cookie-scoop/src/: public.rs  types.rs
crates/cookie-scoop/src/providers/: firefox.rs  mod.rs  safari.rs
crates/cookie-scoop/src/providers/chromium/: keychain.rs  linux_keyring.rs  mod.rs  paths.rs
crates/cookie-scoop/src/util/: exec.rs
crates/test-jira/: Cargo.toml
crates/test-jira/src/: main.rs
